agregar neuvas variables
